--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>JS - Katas 03</title>
 </head>
 <body>
+    <h1>JS - Katas 03(ver console)</h1>
     <script src="katas3.js"></script>
 </body>
 </html>
